--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
-  "singleQuote": false,
-  "semi":true
+  "printWidth": 100,
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "singleQuote": true,
+  "semi": false,
+  "endOfLine": "lf"
 }
