--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@garafu/mysql-fileloader": "github:garafu/mysql-fileloader",
+    "bcrypt": "^5.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "1.4",
     "csrf": "3.1",
