--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "4.17",
     "express-mysql-session": "^3.0.0",
     "express-session": "1.17",
+    "http-graceful-shutdown": "3.1",
     "log4js": "^6.9.1",
     "moment": "2.29",
     "mysql": "2.18",
