--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install",
     "format": "prettier --write *.js",
     "lint": "eslint --fix *.js",
     "fix": "npm run format && npm run lint",
-    "prepare": "husky install"
+    "prebuid": "rimraf ./dist/**/**",
+    "build": "pkg ."
   },
   "lint-staged": {
     "*.js": [
@@ -23,7 +24,9 @@
     "eslint-config-prettier": "8.3",
     "husky": "^6.0.0",
     "lint-staged": "^11.2.6",
-    "prettier": "^2.8.8"
+    "pkg": "5.8",
+    "prettier": "^2.8.8",
+    "rimraf": "3.0"
   },
   "dependencies": {
     "@garafu/mysql-fileloader": "github:garafu/mysql-fileloader",
@@ -43,5 +46,17 @@
     "passport-local": "^1.0.0",
     "round-to": "5.0",
     "serve-favicon": "2.5"
+  },
+  "bin": "./app.js",
+  "pkg": {
+    "assets": [
+      "./views/**/*.ejs",
+      "./lib/**/*.sql",
+      "./public/**/*"
+    ],
+    "targets": [
+      "node16-macos-arm64"
+    ],
+    "outputPath": "./dist"
   }
 }
